k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: eureka-server-service
spec:
  selector:
    app: eureka-server
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
      nodePort: 30661   # valid NodePort on Windows
  type: NodePort
